--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "mobx": "^5.10.1",
     "mobx-react": "^5.4.4",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
     "postcss-flexbugs-fixes": "4.1.0",
